<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="search_hint">Book Data</string>
    <string name="book_cover">Bookcover</string>
    <string name="scanner_copy_text">PLACE ISBN-CODE INSIDE THE VIEWFINDER</string>

    <string name="ok_button">Next</string>
    <string name="close_scanner">CLOSE SCANNER</string>
    <string name="cancel_button">Cancel</string>
    <string name="are_your_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>
    <string name="not_available">Not Available</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="info">Info</string>
    <string name="categories">Categories</string>
    <string name="authors">Authors</string>
    <string name="close_uppercase">CLOSE</string>
    <string name="add_to_list_uppercase">ADD TO LIST</string>
    <string name="delete_book_uppercase">DELETE BOOK</string>
    <string name="start">Start</string>
    <string name="or">Or</string>
    <string name="add_books_title">EASILY ADD BOOKS TO YOUR LIBRARY</string>

    <string name="intro_step_one">Welcome to Alexandria! The best way to have a quick list of your favorite books right at your fingertips!</string>
    <string name="intro_step_two">Add a book by typing the ISBN number, or use our built-in scanner for a better experience!</string>
    <string name="empty_list">No Books added to your list.</string>

    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
</resources>
