<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <!-- Nice tiled Background -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tiled_background"
        android:alpha="0.05"/>

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peter_river"
        custom:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        custom:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="5dp"
        />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/actions_area">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:padding="20dp">

                <!-- Book Title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fullBookTitle"
                    android:textSize="@dimen/head_line"
                    android:textStyle="bold"
                    />

                <!-- Book Cover Image -->
                <RelativeLayout
                    android:id="@+id/image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card"
                    android:layout_below="@+id/fullBookTitle"
                    android:layout_marginTop="15dp"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="@dimen/book_cover_detail_width"
                        android:layout_height="@dimen/book_cover_detail_height"
                        android:id="@+id/fullBookCover"
                        android:contentDescription="@string/book_cover"
                        android:scaleType="centerCrop"
                        android:src="@drawable/book_default"
                        />

                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@+id/image_container"
                    android:layout_toRightOf="@+id/image_container"
                    android:layout_marginLeft="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/belize_hole" />

                    <!-- Book Subtitle -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fullBookSubTitle"
                        android:maxLines="5"
                        android:ellipsize="end"
                        android:textColor="@color/asbestos"
                        />

                    <!-- Book Description -->
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:id="@+id/fullBookDesc"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:textSize="12sp"
                        android:textColor="@color/belize_hole" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categories"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/authors"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textColor="@color/belize_hole" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/authors"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

        <!-- Actions Area bottom bar -->
        <RelativeLayout
            android:id="@+id/actions_area"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/flat_black"
            android:elevation="5dp"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/ic_action_discard_white"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"/>

        </RelativeLayout>


</RelativeLayout>
